# Mastermind-AI

./: .actrc  .codespellrc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/eval/: evaluate.yaml
configs/reward/: information.yaml  shaped.yaml  sparse.yaml  step_penalty.yaml
configs/sweep/: ppo_sweep.yaml
configs/train/: ppo_baseline.yaml
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.serve  Dockerfile.train  docker-compose.yaml
docs/: architecture.md  mdp_definition.md  model_registry.md
mastermind/: README.md
mastermind/agents/: base_agent.py  consistent_agent.py  knuth_agent.py  random_agent.py
mastermind/engine/: codes.py  feedback.py  game.py  play.py
mastermind/env/: masking.py  mastermind_env.py  obs_encoder.py
mastermind/evaluation/: benchmarks.py  metrics.py  plots.py
scripts/: evaluate.py  sweep.py  train.py
tests/integration/: test_benchmark_runner.py  test_env_episode.py  test_evaluation_regression.py  test_training_smoke.py
tests/unit/: test_agents_consistent.py  test_agents_knuth.py  test_agents_random.py  test_engine_codes.py  test_engine_feedback.py  test_engine_game.py  test_env_masking.py  test_env_obs_encoder.py
web/frontend/: .env.example  README.md  nginx.conf  package-lock.json  package.json
web/frontend/src/: App.tsx
web/frontend/src/api/: client.ts  utils.ts
web/frontend/src/components/: AiGuessDisplay.tsx  FeedbackInput.tsx  GameBoard.tsx  GuessInput.tsx  PegDisplay.tsx  ResultModal.tsx  SettingsPanel.tsx
web/frontend/src/hooks/: useGameState.ts  useSettings.ts
web/frontend/src/pages/: CodebreakerPage.tsx  CodekeeperPage.tsx  HomePage.tsx  SettingsPage.tsx
web/server/: .env.example  README.md  pytest.ini
web/server/config/: settings.py  urls.py
web/server/game/: agent.py  serializers.py  session.py  tests.py  urls.py  views.py
