[project]
name = "mastermind-AI"
version = "0.1.0"
description = "Mastermind board game AI Bot player"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "sb3-contrib>=2.0",
    "wandb>=0.16",
    "hydra-core>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mastermind"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mastermind --cov-report=term-missing"

[tool.uv]
torch-backend = "cpu"
