[project]
name = "mastermind-AI"
version = "0.1.0"
description = "Mastermind board game AI Bot player"
requires-python = ">=3.13"
# Runtime dependencies for the RL training pipeline and FastAPI serve script
dependencies = [
    "gymnasium>=0.29",          # Gymnasium RL environment interface
    "stable-baselines3>=2.0",   # PPO base implementation
    "sb3-contrib>=2.0",         # MaskablePPO (action masking support)
    "wandb>=0.16",              # Experiment tracking and sweep orchestration
    "hydra-core>=1.3",          # Hierarchical config management for training
    "fastapi>=0.110",           # Lightweight inference API server
    "uvicorn>=0.27",            # ASGI server for FastAPI
    "pydantic>=2.0",            # Request/response schema validation
    "numpy>=1.26",              # FEEDBACK_TABLE and observation arrays
    "pandas>=2.0",              # Benchmark result tables
    "matplotlib>=3.8",          # Evaluation plots
    "tqdm>=4.67.3",             # Progress bar during FEEDBACK_TABLE build
]

[dependency-groups]
# Minimal install for packages that only need the engine (no ML stack)
core = [
    "numpy>=1.26",
]
# Development tooling: testing, linting, type checking, pre-commit
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "codespell>=2.4",
    "httpx>=0.27",              # Async HTTP client used in e2e tests
    "types-pyyaml>=6.0.12.20250915",
]
# Django web backend and its test runner
backend = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.0",
    "python-decouple>=3.8",     # Reads settings from .env files
    "gunicorn>=21.0",           # Production WSGI server
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Only the mastermind/ package is included in the wheel; web/ is not distributed
[tool.hatch.build.targets.wheel]
packages = ["mastermind"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes errors, I: isort, N: pep8-naming, UP: pyupgrade
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
# Allow subclassing gymnasium.Env and using DRF decorators without type errors
disallow_subclassing_any = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mastermind --cov-report=term-missing"

[tool.coverage.run]
# Exclude interactive play script and plotting helpers from coverage requirements
omit = [
    "mastermind/engine/play.py",
    "mastermind/evaluation/plots.py",
]

# Use CPU-only PyTorch to avoid downloading CUDA wheels in CI
[tool.uv]
torch-backend = "cpu"
